--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
@@ -22,6 +22,7 @@
     <!-- <link rel="apple-touch-icon" href="./photoLogoUR.jpg" /> -->
     <link rel="icon" href="/photoLogoUR.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
